[project]
name = "dinov3"
version = "0.1.5"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ftfy>=6.3.1",
    "omegaconf>=2.3.0",
    "regex>=2025.7.34",
    "scikit-learn>=1.7.1",
    "submitit>=1.5.3",
    "termcolor>=3.1.0",
    "torch>=2.8.0",
    "torchmetrics>=1.8.1",
    "torchvision>=0.23.0",
]

[project.scripts]
dinov3 = "dinov3:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
